# nam-rs

./: .gitignore  .gitmodules  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml
benches/: process_buffer.rs
examples/: run_model.rs  streaming.rs
src/: error.rs  lib.rs  lstm.rs  model.rs  model_runtime.rs  reader.rs  wavenet.rs
src/lstm/: cell.rs
src/wavenet/: activation.rs  array.rs  conv.rs  film.rs  gating.rs  head.rs  layer.rs
tests/: parity.rs  parser.rs  rt_safety.rs
tests/examples/: README.md
tests/fixtures/: README.md  a2_blended.nam  a2_bottleneck.nam  a2_film.nam  a2_gated.nam  a2_grouped.nam  a2_head1x1.nam  condition_dsp_mono.nam  conv_head.nam  expected_a2_blended.json  expected_a2_bottleneck.json  expected_a2_film.json  expected_a2_gated.json  expected_a2_grouped.json  expected_a2_head1x1.json  expected_condition_dsp.json  expected_condition_dsp_multi.json  expected_conv_head.json  expected_output.json  expected_output_leaky.json  expected_output_lstm.json  expected_output_lstm_standard.json  expected_output_standard.json  expected_post_stack_head.json  expected_slim_0.json  expected_slim_1.json  expected_slim_2.json  gen_fixtures.py  input.json  input_a2_head1x1.json  input_condition_dsp.json  input_conv_head.json  input_post_stack_head.json  input_standard.json  leaky_wavenet.nam  make_a2_synthetic_fixtures.py  make_condition_dsp.py  make_condition_dsp_multi.py  make_conv_head_fixture.py  make_leaky_wavenet.py  (+5 more)
tests/oracle/: CMakeLists.txt  README.md  build.sh  check_a1_crosscheck.py  oracle.cpp  oracle_gen.py
